--- a/Paginas Web/Boostrap 1 Videojuegos V3 JSON/Index.html
+++ b/Paginas Web/Boostrap 1 Videojuegos V3 JSON/Index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <title> Galería de Videojuegos</title>
   <script src="https://kit.fontawesome.com/9b280daf16.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../css/Style1.css">
@@ -11,19 +12,22 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="icon" href="./Fotos/Icon/icon.ico" type="image/x-icon">
 </head>
+
 <body>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script><header>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <header>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Galería de Videojuegos</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link active" href="#" >Inicio</a></li>
+            <li class="nav-item"><a class="nav-link active" href="#">Inicio</a></li>
             <li class="nav-item"><a class="nav-link" href="./html/galeria.html">Galería</a></li>
             <li class="nav-item"><a class="nav-link" href="./html/simon.html">Simon</a></li>
             <li class="nav-item"><a class="nav-link" href="./html/contacto.html">Contacto</a></li>
@@ -45,12 +49,13 @@
   <div id="modals-container">
     <!-- Los modales se cargarán aquí -->
   </div>
-<!-- Footer -->
-<footer id="footer" class="bg-dark text-white text-center py-4">
-  <p>&copy; 2024 Galería de Videojuegos. Todos los derechos reservados.</p>
-</footer>
+  <!-- Footer -->
+  <footer id="footer" class="bg-dark text-white text-center py-4">
+    <p>&copy; 2024 Galería de Videojuegos. Todos los derechos reservados.</p>
+  </footer>
   <script src="./js/carga.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
