--- a/Paginas Web/Boostrap 1 Videojuegos/Index.html
+++ b/Paginas Web/Boostrap 1 Videojuegos/Index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Galería de Videojuegos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
   <header>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Galería de Videojuegos</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -69,79 +72,79 @@
       </div>
     </div>
     <div class="row">
-        <!-- Video Game Card 4 -->
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <img src="./Fotos/Cards Juegos/ZTOK.png" class="card-img-top" alt="Aventura Épica">
-            <div class="card-body">
-              <h5 class="card-title">The legend of Zelda Tears of the kingdom</h5>
-              <p class="card-text">Enbarcate en una emocionante aventura por Hyrule</p>
-              <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal4">Ver más</button>
-            </div>
-          </div>
-        </div>
-  
-        <!-- Video Game Card 5 -->
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <img src="./Fotos/Cards Juegos/MC.png" class="card-img-top" alt="Furia en la Carretera">
-            <div class="card-body">
-              <h5 class="card-title">Minecraft</h5>
-              <p class="card-text">Deja colar tu imaginacion y construye.</p>
-              <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal5">Ver más</button>
-            </div>
-          </div>
-        </div>
-  
-        <!-- Video Game Card 6 -->
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <img src="./Fotos/Cards Juegos/Crash.png" class="card-img-top" alt="Campeones del Deporte">
-            <div class="card-body">
-              <h5 class="card-title">Crash of the titans</h5>
-              <p class="card-text">Pelea y controla monstruos</p>
-              <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal6">Ver más</button>
-            </div>
+      <!-- Video Game Card 4 -->
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="./Fotos/Cards Juegos/ZTOK.png" class="card-img-top" alt="Aventura Épica">
+          <div class="card-body">
+            <h5 class="card-title">The legend of Zelda Tears of the kingdom</h5>
+            <p class="card-text">Enbarcate en una emocionante aventura por Hyrule</p>
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal4">Ver más</button>
           </div>
         </div>
       </div>
-      <div class="row">
-        <!-- Video Game Card 7 -->
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <img src="./Fotos/Cards Juegos/MyL.webp" class="card-img-top" alt="Aventura Épica">
-            <div class="card-body">
-              <h5 class="card-title">Mario y luigi compañeros en el tiempo</h5>
-              <p class="card-text">Salva el reino champioñon otra vez.</p>
-              <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal7">Ver más</button>
-            </div>
-          </div>
-        </div>
-  
-        <!-- Video Game Card 8 -->
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <img src="./Fotos/Cards Juegos/Spiderman.jpg" class="card-img-top" alt="Furia en la Carretera">
-            <div class="card-body">
-              <h5 class="card-title">Spider-Man</h5>
-              <p class="card-text">Vuelvete Spiderman y balanceate por la ciudad</p>
-              <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal8">Ver más</button>
-            </div>
-          </div>
-        </div>
-  
-        <!-- Video Game Card 9 -->
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <img src="./Fotos/Cards Juegos/Tetris.png" class="card-img-top" alt="Campeones del Deporte">
-            <div class="card-body">
-              <h5 class="card-title">Tetris</h5>
-              <p class="card-text">Apila bloques</p>
-              <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal9">Ver más</button>
-            </div>
+
+      <!-- Video Game Card 5 -->
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="./Fotos/Cards Juegos/MC.png" class="card-img-top" alt="Furia en la Carretera">
+          <div class="card-body">
+            <h5 class="card-title">Minecraft</h5>
+            <p class="card-text">Deja colar tu imaginacion y construye.</p>
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal5">Ver más</button>
           </div>
         </div>
       </div>
+
+      <!-- Video Game Card 6 -->
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="./Fotos/Cards Juegos/Crash.png" class="card-img-top" alt="Campeones del Deporte">
+          <div class="card-body">
+            <h5 class="card-title">Crash of the titans</h5>
+            <p class="card-text">Pelea y controla monstruos</p>
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal6">Ver más</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <!-- Video Game Card 7 -->
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="./Fotos/Cards Juegos/MyL.webp" class="card-img-top" alt="Aventura Épica">
+          <div class="card-body">
+            <h5 class="card-title">Mario y luigi compañeros en el tiempo</h5>
+            <p class="card-text">Salva el reino champioñon otra vez.</p>
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal7">Ver más</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Video Game Card 8 -->
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="./Fotos/Cards Juegos/Spiderman.jpg" class="card-img-top" alt="Furia en la Carretera">
+          <div class="card-body">
+            <h5 class="card-title">Spider-Man</h5>
+            <p class="card-text">Vuelvete Spiderman y balanceate por la ciudad</p>
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal8">Ver más</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Video Game Card 9 -->
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="./Fotos/Cards Juegos/Tetris.png" class="card-img-top" alt="Campeones del Deporte">
+          <div class="card-body">
+            <h5 class="card-title">Tetris</h5>
+            <p class="card-text">Apila bloques</p>
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal9">Ver más</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
 
   <!-- Modals -->
@@ -207,7 +210,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            El juego donde todo el mundo llama al protagonista como la princesa
+          El juego donde todo el mundo llama al protagonista como la princesa
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -243,7 +246,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          Derrota al mal mientras controlando a monstruos a puñetazos ya que apruebas el maltrato animal 
+          Derrota al mal mientras controlando a monstruos a puñetazos ya que apruebas el maltrato animal
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -314,4 +317,5 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
