--- a/Paginas Web/Practica 1/htmlpag2/Ejercico2.html
+++ b/Paginas Web/Practica 1/htmlpag2/Ejercico2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="../css/styles2.css">
 
@@ -10,6 +11,7 @@
 <header>
     <h1>Tabla comparativa versiones HTML</h1>
 </header>
+
 <body>
     <table>
         <tr>
@@ -26,10 +28,11 @@
             <td>Flexible</td>
             <td>Pocas</td>
             <td>Antiguos</td>
-            <td rowspan="4">Prefiero HTML5 por su modernidad, compatibilidad con aplicaciones móviles y potentes características semánticas que mejoran la accesibilidad y SEO.</td>
+            <td rowspan="4">Prefiero HTML5 por su modernidad, compatibilidad con aplicaciones móviles y potentes
+                características semánticas que mejoran la accesibilidad y SEO.</td>
         </tr>
         <tr>
-            <td class="Versiones" >HTML 4.01</td>
+            <td class="Versiones">HTML 4.01</td>
             <td>Moderada</td>
             <td>Más estricta que 3.2</td>
             <td>Moderadas</td>
@@ -55,6 +58,7 @@
         <a class="pagina3" href="../htmlpag3/Ejercicio3.html"> Siguiente pagina</a>
         <h3 class="autor">Daniel Garcia Brun</h3>
 
-      </footer>
+    </footer>
 </body>
+
 </html>
